# mod-mmap

./: Cargo.toml  README.md
benches/: mmap_bench.rs
examples/: advanced_features.rs  basic_usage.rs  columnar_database.rs  database_example.rs  performance_benchmark.rs  performance_comparison.rs
src/: error.rs  lib.rs  mmap.rs
src/advanced/: huge_pages.rs  mod.rs  numa.rs  prefetch.rs
src/columnar/: column.rs  compression.rs  index.rs  mod.rs  query.rs  schema.rs  storage.rs  table.rs
src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/utils/: alignment.rs  concurrency.rs  metrics.rs  mod.rs
